don't cut :x:y cursor info from remote urls

we do no check if the full url is existing
BUG: 487151